--- a/app.css
+++ b/app.css
@@ -53,7 +53,8 @@ h1 {
 
 form input,
 form button,
-.list-items li {
+.list-items li,
+.toasty {
   border-radius: 1.2rem;
 }
 
@@ -177,4 +178,42 @@ form button:hover {
 
 .list-items button:hover {
   background-color: var(--border-color-primary);
+}
+
+/* Toasty */
+.toasty {
+  display: flex;
+  align-items: center;
+  background-color: var(--color-danger);
+  color: var(--content-color-always-white);
+  padding: 1.2rem;
+  width: 100%;
+  max-width: 327px;
+  line-height: 2rem;
+  font-weight: bold;
+  min-height: 4.4rem;
+  position: fixed;
+  bottom: 20rem;
+  left: 50%;
+  transform: translateX(-50%);
+}
+
+.toasty img {
+  margin-right: 8px;
+}
+
+.toasty button {
+  display: block;
+  width: 2rem;
+  height: 2rem;
+  border: none;
+  margin-left: auto;
+  background-color: transparent;
+  background-image: url('data:image/svg+xml,<svg width="12" height="12" viewBox="0 0 12 12" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M0.46967 0.46967C0.762563 0.176777 1.23744 0.176777 1.53033 0.46967L6 4.93934L10.4697 0.46967C10.7626 0.176777 11.2374 0.176777 11.5303 0.46967C11.8232 0.762563 11.8232 1.23744 11.5303 1.53033L7.06066 6L11.5303 10.4697C11.8232 10.7626 11.8232 11.2374 11.5303 11.5303C11.2374 11.8232 10.7626 11.8232 10.4697 11.5303L6 7.06066L1.53033 11.5303C1.23744 11.8232 0.762563 11.8232 0.46967 11.5303C0.176777 11.2374 0.176777 10.7626 0.46967 10.4697L4.93934 6L0.46967 1.53033C0.176777 1.23744 0.176777 0.762563 0.46967 0.46967Z" fill="white"/></svg>');
+  background-position: center;
+  background-repeat: no-repeat;
+  overflow: hidden;
+  font-size: 0;
+  line-height: 0;
+  cursor: pointer;
 }
