feat: adiciona novos items a lista

--- a/app.css
+++ b/app.css
@@ -187,7 +187,7 @@ form button:hover {
 
 /* Toasty */
 .toasty {
-  display: flex;
+  display: none;
   align-items: center;
   background-color: var(--color-danger);
   color: var(--content-color-always-white);
